--- a/src/AttendanceHistory.form
+++ b/src/AttendanceHistory.form
@@ -76,8 +76,11 @@
     <Component class="javax.swing.JComboBox" name="jComboBox1">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="1">
+          <StringArray count="4">
             <StringItem index="0" value="Choose Course"/>
+            <StringItem index="1" value="CPIT 440"/>
+            <StringItem index="2" value="CPIT 330"/>
+            <StringItem index="3" value="CPIS 428"/>
           </StringArray>
         </Property>
       </Properties>
@@ -89,6 +92,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="My Attendance History"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
